# example-dvc-dataset

./: README.md  example_main.py  pyproject.toml
.dvc/: config
dataset/: iris.csv.dvc
example_dvc_dataset/: __init__.py  interface.py
