[tool.poetry]
name = "example_dvc_dataset"
version = "0.1.0"
description = ""
authors = ["Alvin Prayuda <alvinprayuda@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
scikit-learn = "^1.0.2"
pandas = "^1.4.1"
dvc = {extras = ["gdrive"], version = "^2.9.5"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
